--- a/Views/Interface/ScAchievementsListCompactVertical.xaml
+++ b/Views/Interface/ScAchievementsListCompactVertical.xaml
@@ -8,12 +8,13 @@
              xmlns:controls="clr-namespace:CommonPluginsPlaynite.Controls"
              xmlns:commonpluginsshared="clr-namespace:CommonPluginsShared"
              xmlns:local1="clr-namespace:SuccessStory.Controls"
+             xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
              mc:Ignorable="d" d:DesignHeight="100" d:DesignWidth="100">
 
     <UserControl.Resources>
         <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-        <commonpluginsshared:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
+        <convertersshared:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
         <local1:SetColorConverter x:Key="SetColorConverter" />
     </UserControl.Resources>
 
