--- a/Views/SuccessStoryEditManual.xaml
+++ b/Views/SuccessStoryEditManual.xaml
@@ -60,23 +60,12 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <StackPanel Grid.Column="0" Visibility="{Binding ElementName=PART_CbUnlock, Path=IsChecked, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            <StackPanel Name="PART_ImgUnlock" Grid.Column="0" 
+                                        Visibility="{Binding ElementName=PART_CbUnlock, Path=IsChecked, Converter={StaticResource BooleanToVisibilityConverter}}">
                                 <StackPanel Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
                                             Visibility="{Binding IsGray, Converter={StaticResource BooleanToVisibilityConverter}}">
-                                    <Image Stretch="UniformToFill"
-                                           Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
-                                        <Image.Source>
-                                            <FormatConvertedBitmap Source="{Binding ImageUnlocked}" DestinationFormat="Gray32Float" />
-                                        </Image.Source>
-                                        <Image.OpacityMask>
-                                            <ImageBrush ImageSource="{Binding ImageUnlocked, IsAsync=True}" />
-                                        </Image.OpacityMask>
-                                    </Image>
-                                    <Image Stretch="UniformToFill" 
+                                    <Image Stretch="UniformToFill" Source="{Binding ImageUnlocked}"
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource BooleanToVisibilityConverter}}">
-                                        <Image.Source>
-                                            <FormatConvertedBitmap Source="{Binding ImageUnlocked}" DestinationFormat="Gray32Float" />
-                                        </Image.Source>
                                         <Image.OpacityMask>
                                             <ImageBrush ImageSource="{Binding ImageUnlocked, IsAsync=True}" />
                                         </Image.OpacityMask>
@@ -99,7 +88,8 @@
                                 </StackPanel>
                             </StackPanel>
 
-                            <StackPanel Grid.Column="0" Visibility="{Binding ElementName=PART_CbUnlock, Path=IsChecked, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
+                            <StackPanel Name="PART_ImgLock" Grid.Column="0" 
+                                        Visibility="{Binding ElementName=PART_CbUnlock, Path=IsChecked, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
                                 <StackPanel Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
                                             Visibility="{Binding IsGray, Converter={StaticResource BooleanToVisibilityConverter}}">
                                     <Image Stretch="UniformToFill"
@@ -172,7 +162,7 @@
 
                                 <CheckBox Grid.Column="2" Grid.Row="0" Name="PART_CbUnlock"
                                           Tag="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Mode=OneWay, Converter={StaticResource IndexConverter}}"
-                                          IsChecked="{Binding IsUnlock, Mode=OneWay}" Click="PART_CbUnlock_Click">
+                                          IsChecked="{Binding IsUnlock, Mode=OneTime}" Click="PART_CbUnlock_Click">
                                     <Label Content="Is unlocked" />
                                 </CheckBox>
                                 <DatePicker Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,10,0,0"
