--- a/Controls/PluginList.xaml
+++ b/Controls/PluginList.xaml
@@ -67,8 +67,8 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
 
-                        <StackPanel Grid.Column="0" Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0">
-                            <Image Stretch="UniformToFill" RenderOptions.BitmapScalingMode="Fant">
+                        <StackPanel Grid.Column="0" VerticalAlignment="Top" Margin="0,5,0,0">
+                            <Image Stretch="UniformToFill" RenderOptions.BitmapScalingMode="Fant" Height="48" Width="48">
                                 <Image.Style>
                                     <Style TargetType="{x:Type Image}">
                                         <Style.Triggers>
